<resources>
    <string name="app_name">Logica App</string>
    <string name="title_text">Conjunction (AND)</string>
    <string name="text_a">A</string>
    <string name="text_b">B</string>
    <string name="text_AND">A ^ B</string>
    <string name="text_true">T</string>
    <string name="text_false">F</string>
    <string name="button_text">Submit</string>
    <string name="acceptable_answers">tfTF</string>
    <string name="check_message">You have %d answers correct!</string>
    <string name="error_message">You have to fill everything in first!</string>
    <string name="super_error">ERROR!!!</string>
</resources>
